bug 139176 patch by paper r=biesi sr=tor Animated gif with no global palette puts garbage in transparent area on first loop